Fix jumping glitch when switching to editor

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -364,6 +364,7 @@ span.et2_checkbox_slideSwitch {
 	.et2_hbox.et2_box_widget.overlay_toolbar {
 		margin-bottom: 40px;
 		display: inline-flex;
+		height: 30px;
 		& > * {
 			margin-right: 10px;
 		}
@@ -377,7 +378,7 @@ span.et2_checkbox_slideSwitch {
 		background: silver;
 		position: absolute;
 		height: 40px;
-		top: 26px;
+		top: 30px;
 		.et2_label {
 			display: inline-block;
 			background: #c85cda;
@@ -396,6 +397,7 @@ span.et2_checkbox_slideSwitch {
 	.et2_hbox.et2_box_widget.overlay_toolbar {
 		margin-bottom: 40px;
 		display: inline-flex;
+		height: 30px;
 	}
 }
 
